--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1936349005,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-4",
-  "rate": "4.83"
+  "date": "2024-Oct-7",
+  "rate": "4.83",
+  "seed": 1187017932,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
