--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 422270696,
-  "date": "2024-Oct-7",
-  "rate": "4.83"
+  "seed": 1514789778,
+  "date": "2024-Oct-7"
 }
