--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Oct-8",
-  "seed": 1489498167
+  "rate": "4.83",
+  "seed": 18754569,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
