--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
   "date": "2024-Oct-8",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 930050064
+  "seed": 1806137336,
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
