--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Oct-9",
   "rate": "4.83",
-  "seed": 236770956,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-9"
+  "seed": 1346760444
 }
