--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "seed": 719607779,
+  "date": "2024-Oct-9",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-9"
+  "rate": "4.83",
+  "seed": 1507054529
 }
