--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 979214156,
-  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Oct-10",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 159777944,
+  "rate": "4.83"
 }
