--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
+  "seed": 1851161136,
   "date": "2024-Oct-10",
-  "seed": 2071034635
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
