--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "seed": 1465324313,
   "date": "2024-Oct-10",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 824031145,
+  "rate": "4.83"
 }
