--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 526703577,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "date": "2024-Oct-10"
+  "date": "2024-Oct-10",
+  "seed": 1020016049
 }
