--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
   "date": "2024-Oct-10",
-  "seed": 1020016049
+  "seed": 2129318475,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.83"
 }
