--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Oct-10",
-  "seed": 1516504837,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.83",
+  "seed": 1988854323
 }
