--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
+  "seed": 1371067314,
   "date": "2024-Oct-10",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2138003841
+  "rate": "4.83"
 }
