--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1735202285,
+  "rate": "4.83",
   "date": "2024-Oct-14*",
-  "seed": 17193057,
-  "rate": "4.83"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
