--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 805238495,
   "rate": "4.83",
-  "date": "2024-Oct-14*",
-  "seed": 219705830
+  "date": "2024-Oct-14*"
 }
