--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 791054545,
   "date": "2024-Oct-14*",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1235015775
 }
