--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 227499526,
+  "rate": "4.83",
   "date": "2024-Oct-15",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "seed": 554536246
 }
