--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
   "date": "2025-Feb-19",
-  "seed": 1632891006,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 117210642
 }
