--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1429158947,
+  "date": "2025-Feb-19",
   "rate": "4.33",
-  "date": "2025-Feb-19"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1324358163
 }
