--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 718260098,
-  "rate": "4.33",
   "date": "2025-Feb-19",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 227694286
 }
