--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1852684271,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-Feb-19",
-  "seed": 1139425582
+  "date": "2025-Feb-20",
+  "rate": "4.33"
 }
