--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1852684271,
+  "seed": 65670356,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-20",
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-Feb-20"
 }
