--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Feb-20",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 2032696066,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Feb-20",
+  "seed": 993779176
 }
