--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2011836050,
   "date": "2025-Feb-20",
-  "seed": 505554142
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
