--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2011836050,
+  "rate": "4.33",
   "date": "2025-Feb-20",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 1074590208
 }
