--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
   "date": "2025-Feb-20",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1074590208
+  "seed": 222303936,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
