--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1286370489,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Feb-20",
-  "seed": 222303936,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Feb-20"
 }
