--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Feb-20",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1061552081,
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 962604669
 }
