--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1730173795,
   "date": "2025-Feb-21",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 48720960,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
