--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "date": "2025-Feb-21",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1031952708,
-  "date": "2025-Feb-21"
+  "rate": "4.33",
+  "seed": 412557931
 }
