--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-21",
   "rate": "4.33",
-  "seed": 2102748241
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1100043340,
+  "date": "2025-Feb-21"
 }
