--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Feb-21",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Feb-24",
   "rate": "4.33",
-  "seed": 901292961,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1335926356
 }
