--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Feb-24",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 730987373,
   "rate": "4.33",
-  "date": "2025-Feb-24"
+  "seed": 1652052844
 }
