--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-24",
   "rate": "4.33",
-  "seed": 878017084
+  "seed": 1769300665,
+  "date": "2025-Feb-24"
 }
