--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "date": "2025-Feb-24",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 617457201,
-  "rate": "4.33"
+  "seed": 448197929,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
