--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Feb-24",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 2113038442
+  "seed": 263011266,
+  "date": "2025-Feb-24",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
