--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1712583941,
   "date": "2025-Feb-25",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 565617753,
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
