--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Feb-25",
-  "seed": 417921695,
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
+  "seed": 71125809
 }
