--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Feb-25",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 71125809
+  "date": "2025-Feb-25",
+  "seed": 1830491300,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
