--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Feb-25",
   "rate": "4.33",
-  "seed": 1354020485,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1759002214,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Feb-25"
 }
