--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Feb-26",
-  "seed": 2022412624
+  "seed": 251380728,
+  "date": "2025-Feb-26"
 }
