--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 344773510,
   "date": "2025-Feb-26",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 1310717692
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
