--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 344773510,
+  "seed": 685314351,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Feb-26",
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
