--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2117112950,
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
   "date": "2025-Feb-27",
-  "rate": "4.33"
+  "seed": 963919337
 }
