--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "date": "2025-Feb-27",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1678044846,
-  "date": "2025-Feb-27"
+  "rate": "4.33",
+  "seed": 1153594964
 }
