--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1485352398,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
+  "seed": 166540291,
   "date": "2025-Feb-27",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
