--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "date": "2025-Feb-27",
-  "seed": 2004451678,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 448296784,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
