--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1669240502,
+  "date": "2025-Feb-28",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-28"
+  "rate": "4.33",
+  "seed": 1894928324
 }
