--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 750428333,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Feb-28",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33",
+  "seed": 1052814668
 }
