--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1993296858,
+  "seed": 1080929773,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
-  "date": "2026-Feb-9"
+  "date": "2026-Feb-9",
+  "rate": "3.64"
 }
